# civrealm

./: .github.link  .github.patch  .gitignore  .gitlab-ci.yml  .project  .pydevproject  404.html  MANIFEST.in  README.md  TODO.MD  civ_prep_selenium.sh  commit-github  copy_ci_test_saves.py  dataset_setting.yaml  default_settings.yaml  default_settings.yml  docker-compose.yml  example_observation_turn15_actions.json  example_observation_turn15_state.json  index.html  llm_wrapper_settings.yml  mkdocs.yaml  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/: .github.link  .github.patch  commit-github
.github/workflows/: doc.yml
.gitlab/issue_templates/: feature_request.md
.sonar/: report-task.txt
advanced_materials/: architecture.html  freeciv.html  freeciv_web.html  fullgame_action.html  fullgame_description.html  fullgame_observation.html  fullgame_usage.html  game_settings.html  llm_agent.html  minigame_create.html  minigame_setting.html  minigame_usage.html  parallel_training.html  selfplay.html  tensor_agent.html
advanced_materials/game_setting_tables/: basic_settings.csv  debug.csv  parallel.csv
api_reference/: environments.html  observations.html  wrappers.html
docs/: index.md
docs/advanced_materials/: architecture.md  frame.md  fullgame.md  fullgame_action.md  fullgame_description.md  fullgame_observation.md  fullgame_usage.md  game_setting.md  game_settings.md  llm_agent.md  minigame.md  minigame_create.md  minigame_setting.md  minigame_usage.md  parallel_training.md  tensor_agent.md
docs/api_reference/: api.md  environments.md  observations.md  wrappers.md
docs/css/: extra.css
docs/getting_started/: basic_usage.md  first_agent.md  installation.md  introduction.md  quickstart.md  requirements.md  system_requirements.md  trouble_shooting.md  visualization.md
docs/misc/: faq.md  resources.md
docs/notes/: contribute.md
docs/releases/: releases.md
game_scores/: evaluations.json  players.json
getting_started/: basic_usage.html  first_agent.html  installation.html  requirements.html  trouble_shooting.html  visualization.html
logs/: example_observation_turn15_actions.json
misc/: faq.html  resources.html
modified_server_code/: DeleteSaveGame.java  ListSaveGames.java  pubscript_multiplayer.serv  pubscript_singleplayer.serv
notes/: benchmarks.html  contribute.html
releases/: releases.html
search/: search_index.json
src/: .clinet.py.swp  README.md  build-server.sh  civclient.py  gym_freeciv_web_random_test.py  logging.conf  setup.py  sonar-project.properties  template.py
src/.sonar/: report-task.txt
src/bot/: base_bot.py  dqn_agent.py
src/city/: city.py  city_actions.py  city_ctrl.py  city_state.py
src/civrealm/: __init__.py  ai_game_assistant.py  game_ai_assistant.py  offline_dataset_collect.py  parallel_tensor.py  random_game.py  random_game_minitask.py  random_game_parallel.py  random_game_self_play.py  random_game_seq.py
src/connectivity/: Basehandler.py  client_state.py  clinet.py
src/freeciv_gym/: __init__.py  mask_dqn.py  parallel_tensor.py  random_game.py  random_game_minitask.py  random_game_parallel.py  random_game_parallel_backup.py  random_game_seq.py  random_test.py
src/freecivbot/: build_server.py  civ_controller.py  civclient.py  clean.py  init_server.py  prep_fire_selenium.sh  template.py  turn_manager.py
src/game/: game_ctrl.py  info_states.py  options_ctrl.py  ruleset.py
src/game_info/: game.py  options.py  ruleset.py  user_auth.py
src/gym_freeciv_web/: __init__.py  gymnasium_random_test.py  random_test.py
src/map/: map_ctrl.py  map_state.py
src/mapping/: map.py  map_ctrl.py  tile.py
src/players/: diplomacy.py  government.py  player.py  player_actions.py  player_ctrl.py  player_state.py
src/research/: req_info.py  tech.py  tech_actions.py  tech_ctrl.py  tech_helpers.py  tech_state.py
src/to be structured/: map-from-image.js  replay.js  scorelog.js
src/units/: spacerace.py  unit.py  unit_action.py  unit_actions.py  unit_ctrl.py  unit_state.py
src/utils/: banlist.py  base_action.py  base_state.py  freeciv_wiki.py  freecivlog.py  utility.py  utils_testing.py
tests/: __init__.py  conftest.py  deprecated_test_connectivity.py  help.py  prepare_saved_games_before_tests.sh  test_build_city.py  test_build_road.py  test_change_government.py  test_city_change_specialist.py  test_city_change_unit_prod.py  test_city_unwork.py  test_city_work.py  test_connectivity.py  test_cultivate.py  test_irrigation.py  test_mine.py  test_move_to.py  test_plant.py  testdeprecated_connectivity.py
tests/city/: test_city_buy_if_anarchy.py  test_city_buy_prod.py  test_city_change_improve_prod.py  test_city_change_specialist.py  test_city_change_unit_prod.py  test_city_sell_improvement.py  test_city_unwork.py  test_city_work.py
tests/demo/: demo_player1.py  demo_player2.py
tests/demo_v2/: demo_player1.py  demo_player2.py  image_update.sh
tests/dipl/: test_dipl_accept_treaty.py  test_dipl_add_clause.py  test_dipl_cancel_treaty.py  test_dipl_cancel_vision.py  test_dipl_remove_clause.py  test_dipl_start_negotiate.py  test_dipl_stop_negotiate.py  test_dipl_trade_city.py  test_dipl_trade_gold.py  test_dipl_trade_tech.py
tests/env/: test_allied_victory.py  test_culture_victory.py  test_env_wrappers.py  test_tech_victory.py  test_tensor_env.py  test_tensor_minigame_env.py  test_tensor_minitask_env.py  val_loading_minitask_env.py
tests/game_save/: saved_games.md
tests/gov/: test_change_government.py  test_gov_decrease_lux.py  test_gov_decrease_sci.py  test_gov_decrease_tax.py  test_gov_increase_lux.py  test_gov_increase_sci.py  test_gov_increase_tax.py  test_gov_set_sci_lux_tax.py
tests/language_env/: test_city_dict.py  test_unit_dict.py
tests/minitasks/: pull-minitasks  test_build_city.py  test_minitask_build_city.py
tests/player/: test_change_government.py  test_player_accept_treaty.py  test_player_add_clause.py  test_player_cancel_treaty.py  test_player_cancel_vision.py  test_player_decrease_tax.py  test_player_increase_tax.py  test_player_remove_clause.py  test_player_start_negotiate.py  (+4 more)
(+420 files in other folders)
